syntax="proto3";

package book;

service Books {
  rpc GetAllBooks(GetAllBooksRequest) returns (GetBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (GetBookByIdResponse);
}

message Book {
  string _id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
}

message GetAllBooksRequest {
  string sort = 1;
  string id = 2;
}

message GetBooksResponse {
  repeated Book books = 1;
}

message GetBookByIdRequest {
  string _id = 1;
}

message GetBookByIdResponse {
  repeated Book books = 1;
}